src/app/eleccion-docencia/eleccion-list/eleccion-list.component.scss
@import "../../../scss/variables.scss";
@import "../../../scss/styles.scss";
.mwlResizable {
    box-sizing: border-box; // required for the enableGhostResize option to work
    min-width: min-content;
    min-height: min-content;
    max-width: 100%;
    max-height: 100%;
}

mat-list-option {
    &.disabled {
        opacity: 0.4;
        background: none;
        &:hover {
            background:none;
        }
    }
}
.disabled {
    opacity: 0.4;
}

.loading {
    background-color: black;
    position: absolute;
    z-index: 1;
    height: 100%;
    opacity: 0.5;
    width: 100%;
    transition: all 1s;
}

.card {
    margin: 10px;
    display: flex;
    padding: 0;
    height: 100%;
}

.list-column {
    width: 40%;
    padding: 10px;
    border-right: 1px solid gray;
}

.state-column {
    background-color: $primary;
    width: 60%;
    padding: 10px;
}

.left-minimice {
    //position: relative;
    display: flex;
    align-items: center;
    height: 60px;
    width: 100%;
    padding: 1px 1px 1px 10px;
    z-index: 1;
    cursor: pointer;
    mat-icon {
        margin-right: 20px;
    }
    &.black {
        color: white;
    }
}

.left-minimiced {
    .list-column {
        width: 50px;
        .left-minimice {
            transform: rotate(90deg);
            padding: 0;
        }
        .asignaturas {
            display: none;
        }
    }
    .state-column {
        width: -webkit-fill-available;
    }
}

.right-minimiced {
    .state-column {
        width: 50px;
        .left-minimice {
            transform: rotate(90deg);
            padding: 0;
        }
        h2 {
            width: 300px;
            position: absolute;
            margin: auto;
            left: 40px;
        }
        #stateContent {
            display: none;
        }
    }
    .list-column {
        width: -webkit-fill-available;
    }
}

#horarioComponent {
    color: white;
}

.errores {
    margin-top: 10px;
}

.mat-fab-bottom-right3 {
    z-index: 1000;
    top: auto !important;
    right: 170px !important;
    bottom: 10px !important;
    left: auto !important;
    position: fixed !important;
    background-color: $links;
}

.mat-fab-bottom-right1 {
    z-index: 1000;
    top: auto !important;
    right: 105px !important;
    bottom: 10px !important;
    left: auto !important;
    position: fixed !important;
    background-color: $links;
}

.mat-fab-bottom-right2 {
    z-index: 1000;
    top: auto !important;
    right: 40px !important;
    bottom: 10px !important;
    left: auto !important;
    position: fixed !important;
    background-color: $accent;
}

.withIcon {
    display: flex !important;
    align-items: center;
    padding: 1px;
    width: fit-content;
    mat-icon {
        margin-right: 5px;
        font-size: inherit;
        height: unset;
        width: unset;
    }
}

.sidenav {
    width: 30%;
}

.topMenu {
    display: flex;
    align-items: center;
    padding: 0 10px;
    font-size: 0.8em;
}

.buscar {
    display: flex;
}

.separator {
    flex: 1;
}

.profesores {
    display: flex;
    align-items: center;
    justify-items: center;
    margin: auto;
    mat-form-field {
        margin-left: 10px;
    }
}

.info {
    margin: 10px;
}

